Remove random things

--- a/Buzz/Base.lproj/Main.storyboard
+++ b/Buzz/Base.lproj/Main.storyboard
@@ -36,10 +36,7 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem width="217" style="plain" systemItem="fixedSpace" id="19U-55-R6F"/>
-                        <barButtonItem width="177" style="plain" systemItem="fixedSpace" id="vda-eF-b19"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
