Initial layout of views

--- a/Buzz/Base.lproj/Main.storyboard
+++ b/Buzz/Base.lproj/Main.storyboard
@@ -8,6 +8,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Buzz" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -22,15 +23,49 @@
                                 <animations/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ya8-Wq-vB9">
-                                <rect key="frame" x="302" y="413" width="38" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XpV-vy-WCW">
+                                <rect key="frame" x="0.0" y="47" width="600" height="191"/>
                                 <animations/>
-                                <state key="normal" title="Login"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="NIGHTLIFE">
+                                    <color key="titleColor" red="0.98957431100000004" green="1" blue="0.99596382269999995" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="8N0-KN-kng" kind="show" id="tvT-cn-eFg"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmH-23-Ov8">
-                                <rect key="frame" x="298" y="264" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3oQ-QN-1j4">
+                                <rect key="frame" x="0.0" y="440" width="600" height="160"/>
                                 <animations/>
-                                <state key="normal" title="Button"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="PARTIES">
+                                    <color key="titleColor" red="0.98957431100000004" green="1" blue="0.99596382269999995" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="80M-W9-2ID" kind="show" id="38g-fZ-C78"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbN-yZ-EM4">
+                                <rect key="frame" x="0.0" y="238" width="295" height="202"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.62734769570000004" green="0.62734769570000004" blue="0.62734769570000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Connect">
+                                    <color key="titleColor" red="0.98957431100000004" green="1" blue="0.99596382269999995" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="auJ-39-hj8" kind="show" id="a6j-gU-RZW"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZTQ-g4-jV1">
+                                <rect key="frame" x="295" y="238" width="305" height="202"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.38997395829999998" green="0.38997395829999998" blue="0.38997395829999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="BUZZ IN">
+                                    <color key="titleColor" red="0.98957431100000004" green="1" blue="0.99596382269999995" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="ukN-Uv-zGJ" kind="showDetail" id="NAU-Cj-Q8F"/>
+                                </connections>
                             </button>
                         </subviews>
                         <animations/>
@@ -39,8 +74,93 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="950" y="693"/>
+        </scene>
+        <!--Connect-->
+        <scene sceneID="FeO-PO-jpK">
+            <objects>
+                <viewController title="Connect" id="auJ-39-hj8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FmR-FQ-xAA"/>
+                        <viewControllerLayoutGuide type="bottom" id="4CA-6f-LJZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uBh-8R-G1c">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="avO-v7-7lc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="894" y="1533"/>
+        </scene>
+        <!--NightLife-->
+        <scene sceneID="0UJ-lv-Ww6">
+            <objects>
+                <viewController title="NightLife" id="8N0-KN-kng" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7i5-qO-XIi"/>
+                        <viewControllerLayoutGuide type="bottom" id="KHv-JE-Cl8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bQp-DD-1DD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="NightLife" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlK-PT-6pM">
+                                <rect key="frame" x="278" y="247" width="70" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eef-yG-nAu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1632" y="693"/>
+        </scene>
+        <!--Parties-->
+        <scene sceneID="uHj-b2-vUL">
+            <objects>
+                <viewController title="Parties" id="80M-W9-2ID" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nX7-P3-ddq"/>
+                        <viewControllerLayoutGuide type="bottom" id="NJI-qL-mHy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SOE-I1-n5a">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RZo-4h-xHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2356" y="1394"/>
+        </scene>
+        <!--Buzz In-->
+        <scene sceneID="Ha9-yu-44E">
+            <objects>
+                <viewController title="Buzz In" id="ukN-Uv-zGJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RTf-uA-Uzv"/>
+                        <viewControllerLayoutGuide type="bottom" id="ghC-dz-caq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="y4F-hL-UQ6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1mb-U5-TKu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1613" y="1527"/>
         </scene>
     </scenes>
 </document>
