--- a/Buzz/Base.lproj/Main.storyboard
+++ b/Buzz/Base.lproj/Main.storyboard
@@ -23,16 +23,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view alpha="0.94999999999999996" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aMH-fp-Jhm">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                            <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aMH-fp-Jhm">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RzF-DT-iic">
-                                        <rect key="frame" x="8" y="16" width="36" height="33"/>
+                                        <rect key="frame" x="8" y="24" width="36" height="33"/>
                                         <animations/>
-                                        <state key="normal" image="menu.png"/>
+                                        <state key="normal" title="Menu" image="menu.png"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Buzz" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="05i-Hj-FM2">
-                                        <rect key="frame" x="91" y="16" width="233" height="34"/>
+                                        <rect key="frame" x="91" y="23" width="233" height="34"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" name="Salaryman" family="Salaryman" pointSize="25"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -42,12 +42,99 @@
                                 <animations/>
                                 <color key="backgroundColor" red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="aMH-fp-Jhm" secondAttribute="height" multiplier="414:59" id="sin-Vg-7DD"/>
+                                    <constraint firstAttribute="width" secondItem="aMH-fp-Jhm" secondAttribute="height" multiplier="414:59" constant="-77.186440677966118" id="sin-Vg-7DD"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KHX-bg-3GR">
+                                <rect key="frame" x="0.0" y="70" width="414" height="249"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzN-kT-F1c">
+                                        <rect key="frame" x="-21" y="0.0" width="457" height="250"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <state key="normal" title="NIGHTLIFE" backgroundImage="nightlife_bk.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="KHX-bg-3GR" secondAttribute="height" multiplier="138:83" id="6iO-ku-M97"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fec-dq-gmI">
+                                <rect key="frame" x="0.0" y="487" width="414" height="249"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpJ-ot-HNy">
+                                        <rect key="frame" x="-1" y="-8" width="415" height="298"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <state key="normal" title="PARTIES" backgroundImage="parties_bk.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Fec-dq-gmI" secondAttribute="height" multiplier="138:83" id="MU4-cZ-tV1"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7br-W7-e6N">
+                                <rect key="frame" x="0.0" y="319" width="207" height="168"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdS-LH-dFZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="168"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <state key="normal" title="CONNECT" backgroundImage="connect_bk.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7br-W7-e6N" secondAttribute="height" multiplier="69:56" id="b0j-LT-SRB"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wn3-tg-bEd">
+                                <rect key="frame" x="207" y="319" width="207" height="168"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EFk-i1-dRd">
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="168"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <state key="normal" title="BUZZ IN" backgroundImage="bruzz_in_bk.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Wn3-tg-bEd" secondAttribute="height" multiplier="69:56" id="gcg-Hg-gAJ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="top" secondItem="aMH-fp-Jhm" secondAttribute="bottom" id="1XW-oh-Ai0"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="trailing" secondItem="aMH-fp-Jhm" secondAttribute="trailing" id="A38-Lp-kHm"/>
+                            <constraint firstItem="aMH-fp-Jhm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="G95-Fx-uJK"/>
+                            <constraint firstItem="Fec-dq-gmI" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="KqN-Uk-JeT"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="width" secondItem="KHX-bg-3GR" secondAttribute="height" multiplier="138:83" id="Oi3-ZU-28o"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="leading" secondItem="Fec-dq-gmI" secondAttribute="leading" id="SmY-3G-B1t"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="trailing" secondItem="Fec-dq-gmI" secondAttribute="trailing" id="XuB-oI-skb"/>
+                            <constraint firstAttribute="trailing" secondItem="aMH-fp-Jhm" secondAttribute="trailing" id="ZNA-xv-av3"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="width" secondItem="KHX-bg-3GR" secondAttribute="height" multiplier="138:83" id="f1G-lM-yG1"/>
+                            <constraint firstItem="Fec-dq-gmI" firstAttribute="width" secondItem="Fec-dq-gmI" secondAttribute="height" multiplier="138:83" id="lLq-1q-Ho9"/>
+                            <constraint firstItem="aMH-fp-Jhm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qVG-CQ-DsG"/>
+                            <constraint firstItem="Wn3-tg-bEd" firstAttribute="width" secondItem="Wn3-tg-bEd" secondAttribute="height" multiplier="69:56" id="vJJ-7T-03c"/>
+                            <constraint firstItem="KHX-bg-3GR" firstAttribute="leading" secondItem="aMH-fp-Jhm" secondAttribute="leading" id="yjZ-aT-HHV"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -167,6 +254,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bruzz_in_bk.png" width="769" height="604"/>
+        <image name="connect_bk.png" width="769" height="604"/>
         <image name="menu.png" width="512" height="512"/>
+        <image name="nightlife_bk.png" width="877" height="585"/>
+        <image name="parties_bk.png" width="769" height="604"/>
     </resources>
 </document>
